[package]
name = "tool-work-one"
version = "0.1.0"
edition = "2021"

include = ["assets/**"]

[dependencies]
anyhow = "1.0.86"
candle-core = "0.6.0"
candle-examples = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
clap = { version = "4.5.8", features = ["derive"] }
hf-hub = "0.3.2"
iced = { version = "0.9.0", features = ["image"] }
image = "0.24.9"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"

